<?xml version="1.0"?>
<package format="2">
  <name>euler_perception_demo</name>
  <version>0.0.0</version>
  <description>Demo for utilizing perception to identify pick poses</description>

  <maintainer email="mripperger@swri.org">mripperger</maintainer>
  <author email="mripperger@swri.org">mripperger</author>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_stl_containers</depend>
  <depend>eigen_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>std_srvs</depend>
  <depend>moveit_ros_planning_interface</depend>

</package>
